force-app/main/default/objects/EMI_Schedule__c/EMI_Schedule__c.object-meta.xml
<CustomObject>
    <label>EMI Schedule</label>
    <pluralLabel>EMI Schedules</pluralLabel>
    <description>Amortization schedule detailing individual EMI dues, principal, interest, and paid status.</description>
    <nameField>
        <label>EMI Schedule Reference</label>
        <type>AutoNumber</type>
        <displayFormat>SCH-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>