force-app/main/default/objects/EMI_Schedule__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
    <description>Date when the monthly repayment is due.</description>
    <inlineHelpText>Date when the monthly repayment is due.</inlineHelpText>
    <required>true</required>
</CustomField>