force-app/main/default/objects/EMI_Schedule__c/fields/EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMI_Amount__c</fullName>
    <label>EMI Amount</label>
    <type>Currency</type>
    <description>Total monthly installment (Principal + Interest).</description>
    <inlineHelpText>Total monthly installment (Principal + Interest).</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>