force-app/main/default/objects/EMI_Schedule__c/fields/EMI_Number__c.field-meta.xml
<CustomField>
    <fullName>EMI_Number__c</fullName>
    <label>EMI Number</label>
    <type>Number</type>
    <description>Amortization month sequence.</description>
    <inlineHelpText>Amortization month sequence.</inlineHelpText>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>