force-app/main/default/objects/EMI_Schedule__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <label>Interest Amount</label>
    <type>Currency</type>
    <description>Interest portion of this EMI.</description>
    <inlineHelpText>Interest portion of this EMI.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>