force-app/main/default/objects/EMI_Schedule__c/fields/Is_Paid_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid_Flag__c</fullName>
    <label>Is Paid Flag</label>
    <type>Checkbox</type>
    <description>Indicates if the EMI has been paid.</description>
    <inlineHelpText>Indicates if the EMI has been paid.</inlineHelpText>
    <defaultValue>false</defaultValue>
</CustomField>