force-app/main/default/objects/EMI_Schedule__c/fields/Outstanding_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Amount__c</fullName>
    <label>Outstanding Balance Amount</label>
    <type>Currency</type>
    <description>Remaining loan principal after this installment.</description>
    <inlineHelpText>Remaining loan principal after this installment.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>