force-app/main/default/objects/EMI_Schedule__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <label>Paid Date</label>
    <type>Date</type>
    <description>Actual date when payment was cleared.</description>
    <inlineHelpText>Actual date when payment was cleared.</inlineHelpText>
</CustomField>