force-app/main/default/objects/EMI_Schedule__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <label>Principal Amount</label>
    <type>Currency</type>
    <description>Principal portion of this EMI.</description>
    <inlineHelpText>Principal portion of this EMI.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>